# TelegramBotEx

./: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
bot/: main.py  states.py
bot/config/: config.py
bot/handlers/: admin_handler.py  commands_handler.py  schemas.py
bot/keyboards/: keyboards.py
bot/middlewares/: db.py
database/: __init__.py  base.py  config.py  db_helper.py
database/models/: orders_model.py  requests.py
