[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.20.0"
dotenv = "^0.9.9"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
black = "^25.1.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
